--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                 <p>I am a research fellow at the <a href="https://www.esa.int/About_Us/ESRIN">European Space Research Institute</a> of the <a href="https://www.esa.int/">European Space Agency (ESA)</a> in <a href="https://en.wikipedia.org/wiki/Frascati">Frascati</a> in collaboration with the <a href="https://climate.esa.int/en/esa-climate/esa-climate-office/">ESA Climate Office</a> in <a href="https://en.wikipedia.org/wiki/Harwell,_Oxfordshire">Harwell</a>, where I work on computer vision and machine learning for solar energy forecasting.
                 </p>
                 <p>
-                  Previously at the <a href="https://www.cam.ac.uk/">University of Cambridge</a>, I have developped deep learning algorithm for solar nowcasting based on cloud cover observations from sky cameras and weather satellites.
+                  Previously at the <a href="https://www.cam.ac.uk/">University of Cambridge</a>, I have developped deep learning algorithms for advancing solar nowcasting based on cloud cover observations from sky cameras and weather satellites.
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:quentin.paletta@esa.int">Email</a> &nbsp;/&nbsp;
                   <a href="data/QuentinPaletta-CV.pdf">CV</a> &nbsp;/&nbsp;
-                  <a href="data/QuentinPaletta-bio.txt">Bio</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.co.uk/citations?user=QlnhDvEAAAAJ&hl=fr&oi=ao">Google Scholar</a> &nbsp;/&nbsp;
+                  <a href="https://www.linkedin.com/in/quentin-paletta-3855b412b/">LinkedIn</a> &nbsp;/&nbsp;
                   <a href="https://twitter.com/quentinpaletta">Twitter</a> &nbsp;/&nbsp;
                   <a href="https://github.com/quentinpaletta/">Github</a>
                 </p>
@@ -1367,6 +1367,27 @@ for Topologically Varying Neural Radiance Fields</span>
               </td>
             </tr> 
 
+
+
+
+            <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+            <a href="images/review_paper_illustration.jpg"><img src="images/review_paper_illustration.jpg" alt="blind-date" width="160" height="160"></a>
+            </td>
+            <td width="75%" valign="middle">
+            <papertitle>Advances in Solar Forecasting: Computer Vision with Deep Learning</papertitle>
+            <br>
+            <strong>Quentin Paletta‬</strong>, Guillermo Terrén-Serrano, Yuhao Nie, Binghui Li, Jacob Bieker, Wenqi Zhang, Laurent Dubus, Soumyabrata Dev, Cong Feng
+            <br>
+            <em>Advances in Applied Energy</em>, 2023
+            <br>
+            <a href="https://doi.org/10.1016/j.adapen.2023.100150">paper</a>
+            <p></p>
+            <p>
+            We present the latest progress in the field of computer vision-based solar forecasting with a particular focus at the application of deep learning to process cloud cover observations collected by sky cameras or meteorological satellites.
+            </p>
+            </td>
+            </tr>
 
             <tr onmouseout="c5_stop()" onmouseover="c5_start()">
               <td style="padding:20px;width:25%;vertical-align:middle">
