--- a/index.html
+++ b/index.html
@@ -63,7 +63,15 @@
       <td width="75%" valign="middle">
       <papertitle>Advances in Solar Forecasting: Computer Vision with Deep Learning</papertitle>
       <br>
-      <strong>Quentin Paletta‬</strong>, Guillermo Terrén-Serrano, Yuhao Nie, Binghui Li, Jacob Bieker, Wenqi Zhang, Laurent Dubus, Soumyabrata Dev, Cong Feng
+      <strong>Quentin Paletta</strong>,
+      <a href="https://www.cnsi.ucsb.edu/people/researchers/guillermo-terren-serrano">Guillermo Terrén-Serrano</a>,
+      <a href="https://yuhao-nie.github.io/">Yuhao Nie</a>,
+      <a href="https://scholar.google.com/citations?user=2-JbJ1EAAAAJ">Binghui Li</a>,
+      <a href="https://www.jacobbieker.com/">Jacob Bieker</a>,
+      <a href="https://scholar.google.com/citations?user=XYg6LJEAAAAJ&hl=en">Wenqi Zhang</a>,
+      <a href="https://scholar.google.co.uk/citations?user=WSZ-luEAAAAJ&hl=fr&oi=ao">Laurent Dubus</a>,
+      <a href="https://soumyabrata.dev/">Soumyabrata Dev</a>,
+      <a href="https://fengcong1992.github.io/">Cong Feng</a>,
       <br>
       <em>Advances in Applied Energy</em>, 2023
       <br>
@@ -75,48 +83,66 @@
       </td>
       </tr>
 
-    
+      <tr>
+      <td style="padding:20px;width:25%;vertical-align:middle">
+      <a href="images/skygpt.jpg"><img src="images/skygpt.jpg" alt="blind-date" width="160" height="160"></a>
+      </td>
+      <td width="75%" valign="middle">
+      <papertitle>SkyGPT: Probabilistic Short-term Solar Forecasting Using Synthetic Sky Videos from Physics-constrained VideoGPT</papertitle>
+      <br>
+      <a href="https://yuhao-nie.github.io/">Yuhao Nie</a>,
+      <a href="https://zelikman.me/">Eric Zelikman</a>,
+      <a href="https://scholar.google.com/citations?user=p2IqXSEAAAAJ">Andea scott</a>,
+      <strong>Quentin Paletta</strong>,
+      <a href="https://profiles.stanford.edu/adam-brandt">Adam Brandt</a>,
+      <br>
+      <em>Preprint</em>, 2023
+      <br>
+      <a href="https://arxiv.org/abs/2306.11682">paper</a>
+      <p></p>
+      <p>
+        we introduce SkyGPT, a physics-informed stochastic video prediction model that is able to generate multiple possible future images of the sky with diverse cloud motion patterns, by using past sky image sequences as input.
+      </p>
+      </td>
+      </tr>
+
+
+
       <tr onmouseout="zipnerf_stop()" onmouseover="zipnerf_start()"  bgcolor="#ffffd0">
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
-            <div class="two" id='zipnerf_image'><video  width=100% height=100% muted autoplay loop>
-            <source src="images/zipnerf.mp4" type="video/mp4">
+            <div class="two" id='omnivision'><video  width=100% height=100% muted autoplay loop>
+            <source src="images/omnivision.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video></div>
-            <img src='images/zipnerf.jpg' width="160">
+            <img src='images/omnivision.jpg' width="160">
           </div>
           <script type="text/javascript">
             function zipnerf_start() {
-              document.getElementById('zipnerf_image').style.opacity = "1";
+              document.getElementById('omnivision').style.opacity = "1";
             }
 
             function zipnerf_stop() {
-              document.getElementById('zipnerf_image').style.opacity = "0";
+              document.getElementById('omnivision').style.opacity = "0";
             }
             zipnerf_stop()
           </script>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="http://jonbarron.info/zipnerf">
-            <span class="papertitle">Zip-NeRF: Anti-Aliased Grid-Based Neural Radiance Fields</span>
+          <a href="https://doi.org/10.1016/j.apenergy.2023.120818">
+            <span class="papertitle">Omnivision forecasting: Combining satellite and sky images for improved deterministic and probabilistic intra-hour solar energy predictions</span>
           </a>
           <br>
-          <strong>Jonathan T. Barron</strong>,
-          <a href="https://bmild.github.io/">Ben Mildenhall</a>,
-          <a href="https://scholar.harvard.edu/dorverbin/home">Dor Verbin</a>,
-          <a href="https://pratulsrinivasan.github.io/">Pratul Srinivasan</a>,
-          <a href="https://phogzone.com/">Peter Hedman</a>
+          <strong>Quentin Paletta</strong>,
+          <a href="https://www.linkedin.com/in/guillaume-arbod-2b606b44/?originalSubdomain=eng">Guillaume Arbod</a>,
+          <a href="https://www-sigproc.eng.cam.ac.uk/Main/JL">Joan Lasenby</a>,
           <br>
-          <em>ICCV</em>, 2023 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
+          <em>Applied Energy</em>, 2023
           <br>
-          <a href="http://jonbarron.info/zipnerf">project page</a>
-          /
-          <a href="https://www.youtube.com/watch?v=xrrhynRzC8k">video</a>
-          /
-          <a href="https://arxiv.org/abs/2304.06706">arXiv</a>
+          <a href="https://doi.org/10.1016/j.apenergy.2023.120818">paper</a>
           <p></p>
           <p>
-          Combining mip-NeRF 360 and grid-based models like Instant NGP lets us reduce error rates by 8%&ndash;77% and accelerate training by 24x.
+          Combining sky images and satellite observations into a single machine learning framework for intra-hour solar forecasting.
           </p>
         </td>
       </tr>
