--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
                   <a href="mailto:quentin.paletta@esa.int">Email</a> &nbsp;/&nbsp;
                   <a href="data/QuentinPaletta-CV.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.co.uk/citations?user=QlnhDvEAAAAJ&hl=fr&oi=ao">Google Scholar</a> &nbsp;/&nbsp;
-                  <a href="https://www.linkedin.com/in/quentin-paletta-3855b412b/">LinkedIn</a> &nbsp;/&nbsp;
+                  <a href="https://www.linkedin.com/in/quentin-paletta-3855b412b">LinkedIn</a> &nbsp;/&nbsp;
+                  <a href="https://www.researchgate.net/profile/Quentin-Paletta">Research Gate</a> &nbsp;/&nbsp;
                   <a href="https://twitter.com/quentinpaletta">Twitter</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/quentinpaletta/">Github</a>
+                  <a href="https://github.com/quentinpaletta">Github</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
@@ -193,8 +194,48 @@
           Comparative study between local training, global training, and transfer learning for solar nowcasting based on sky images.
         </p>
         </td>
-      </tr>            
-            
+      </tr>
+
+      <tr onmouseout="spin_stop()" onmouseover="spin_start()"  bgcolor="#ffffd0">
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <div class="one">
+            <div class="two" id='spin'><video  width=100% height=100% muted autoplay loop>
+            <source src="images/spin.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+            </video></div>
+            <img src='images/spin.jpg' width="160">
+          </div>
+          <script type="text/javascript">
+            function spin_start() {
+              document.getElementById('spin').style.opacity = "1";
+            }
+
+            function spin_stop() {
+              document.getElementById('spin').style.opacity = "0";
+            }
+            spin_stop()
+          </script>
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <a href="https://doi.org/10.1016/j.apenergy.2023.120818">
+            <span class="papertitle">SPIN: Simplifying Polar Invariance for Neural networks Application to vision-based irradiance forecasting</span>
+          </a>
+          <br>
+          <strong>Quentin Paletta</strong>,
+          <a href="https://anthonyhu.github.io/research/">Anthony Hu</a>,
+          <a href="https://www.linkedin.com/in/guillaume-arbod-2b606b44/?originalSubdomain=eng">Guillaume Arbod</a>,
+          <a href="https://scholar.google.com.tw/citations?user=l0tNZQcAAAAJ&hl=en">Philippe Blanc</a>,
+          <a href="https://www-sigproc.eng.cam.ac.uk/Main/JL">Joan Lasenby</a>,
+          <br>
+          <em>Conference on Computer Vision and Pattern Recognition (CVPR) Workshop</em>, 2022
+          <br>
+          <a href="https://openaccess.thecvf.com/content/CVPR2022W/OmniCV/html/Paletta_SPIN_Simplifying_Polar_Invariance_for_Neural_Networks_Application_to_Vision-Based_CVPRW_2022_paper.html">paper</a>
+          <p></p>
+          <p>
+            Comparative study between various data augmentation and scene presentation methods including the use of polar coordinates. Application to solar forecasting from sky images and satellite observations.
+          </p>
+        </td>
+      </tr>
 
 
             
