--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
       
-      <tr>
+      <tr bgcolor="#ffffd0">
       <td style="padding:20px;width:25%;vertical-align:middle">
       <a href="images/review_paper_illustration.jpg"><img src="images/review_paper_illustration.jpg" alt="blind-date" width="160" height="160"></a>
       </td>
@@ -245,7 +245,7 @@
         <td style="padding:0px">
           <br>
           <p style="text-align:right;font-size:small;">
-            Design and source code from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron's website</a> - V1.
+            Design and source code from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron's website</a>.
           </p>
         </td>
       </tr>
