--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
                   Previously at the <a href="https://www.cam.ac.uk/">University of Cambridge</a>, I have developped deep learning algorithms for advancing solar nowcasting based on cloud cover observations from sky cameras and weather satellites.
                 </p>
                 <p style="text-align:center">
-                  <a href="mailto:quentin.paletta@esa.int">Email</a> &nbsp;/&nbsp;
-                  <a href="data/QuentinPaletta-CV.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.co.uk/citations?user=QlnhDvEAAAAJ&hl=fr&oi=ao">Google Scholar</a> &nbsp;/&nbsp;
                   <a href="https://www.linkedin.com/in/quentin-paletta-3855b412b">LinkedIn</a> &nbsp;/&nbsp;
                   <a href="https://www.researchgate.net/profile/Quentin-Paletta">Research Gate</a> &nbsp;/&nbsp;
                   <a href="https://twitter.com/quentinpaletta">Twitter</a> &nbsp;/&nbsp;
                   <a href="https://github.com/quentinpaletta">Github</a>
+                </p>
+                <p style="text-align:center">
+                  <a href="mailto:quentin.paletta@esa.int">Email</a> &nbsp;/&nbsp;
+                  <a href="data/QuentinPaletta-CV.pdf">CV</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
@@ -153,7 +155,9 @@
         <a href="images/opendatasets.png"><img src="images/opendatasets.png" alt="blind-date" width="160" height="160"></a>
         </td>
         <td width="75%" valign="middle">
-        <papertitle>Open-source ground-based sky image datasets for very short-term solar forecasting, cloud analysis and modeling: A comprehensive survey</papertitle>
+        <a href="https://arxiv.org/abs/2211.14709">
+          <span class="papertitle">Open-source ground-based sky image datasets for very short-term solar forecasting, cloud analysis and modeling: A comprehensive survey</span>
+        </a>
         <br>
         <a href="https://yuhao-nie.github.io/">Yuhao Nie</a>,
         <a href="https://www.linkedin.com/in/xiatong-li-223a781a5/">Xiatong Li</a>,
@@ -177,7 +181,9 @@
         <a href="images/transferlearning.jpg"><img src="images/transferlearning.jpg" alt="blind-date" width="160" height="160"></a>
         </td>
         <td width="75%" valign="middle">
-        <papertitle>Sky-image-based solar forecasting using deep learning with multi-location data: training models locally, globally or via transfer learning?</papertitle>
+        <a href="https://arxiv.org/abs/2211.02108">
+          <span class="papertitle">Sky-image-based solar forecasting using deep learning with multi-location data: training models locally, globally or via transfer learning?</span>
+        </a>
         <br>
         <a href="https://yuhao-nie.github.io/">Yuhao Nie</a>,
         <strong>Quentin Paletta</strong>,
