--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                 </p>
                 <p style="text-align:center">
                   <a href="https://scholar.google.co.uk/citations?user=QlnhDvEAAAAJ&hl=fr&oi=ao">Google Scholar</a> &nbsp;/&nbsp;
-                  <a href="https://www.linkedin.com/in/quentin-paletta-3855b412b">LinkedIn</a> &nbsp;/&nbsp;
                   <a href="https://www.researchgate.net/profile/Quentin-Paletta">Research Gate</a> &nbsp;/&nbsp;
                   <a href="https://twitter.com/quentinpaletta">Twitter</a> &nbsp;/&nbsp;
                   <a href="https://github.com/quentinpaletta">Github</a>
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:quentin.paletta@esa.int">Email</a> &nbsp;/&nbsp;
-                  <a href="data/QuentinPaletta-CV.pdf">CV</a>
+                  <a href="data/QuentinPaletta-CV.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="https://www.linkedin.com/in/quentin-paletta-3855b412b">LinkedIn</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
@@ -225,7 +225,7 @@
           </script>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://doi.org/10.1016/j.apenergy.2023.120818">
+          <a href="https://openaccess.thecvf.com/content/CVPR2022W/OmniCV/html/Paletta_SPIN_Simplifying_Polar_Invariance_for_Neural_Networks_Application_to_Vision-Based_CVPRW_2022_paper.html">
             <span class="papertitle">SPIN: Simplifying Polar Invariance for Neural networks Application to vision-based irradiance forecasting</span>
           </a>
           <br>
@@ -245,7 +245,45 @@
         </td>
       </tr>
 
+      <tr onmouseout="eclipse_stop()" onmouseover="eclipse_start()"  bgcolor="#ffffd0">
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <div class="one">
+            <div class="two" id='eclipse'><video  width=100% height=100% muted autoplay loop>
+            <source src="images/eclipse.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+            </video></div>
+            <img src='images/eclipse.jpg' width="160">
+          </div>
+          <script type="text/javascript">
+            function eclipse_start() {
+              document.getElementById('eclipse').style.opacity = "1";
+            }
 
+            function eclipse_stop() {
+              document.getElementById('eclipse').style.opacity = "0";
+            }
+            eclipse_stop()
+          </script>
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <a href="https://doi.org/10.1016/j.apenergy.2022.119924">
+            <span class="papertitle">ECLIPSE: Envisioning CLoud Induced Perturbations in Solar Energy</span>
+          </a>
+          <br>
+          <strong>Quentin Paletta</strong>,
+          <a href="https://anthonyhu.github.io/research/">Anthony Hu</a>,
+          <a href="https://www.linkedin.com/in/guillaume-arbod-2b606b44/?originalSubdomain=eng">Guillaume Arbod</a>,
+          <a href="https://www-sigproc.eng.cam.ac.uk/Main/JL">Joan Lasenby</a>,
+          <br>
+          <em>Applied Energy</em>, 2022
+          <br>
+          <a href="https://doi.org/10.1016/j.apenergy.2022.119924">paper</a>
+          <p></p>
+          <p>
+            Novel deep learning architecture for solar irradiance and sky image prediction.
+          </p>
+        </td>
+      </tr>
             
     </tbody></table>
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
