--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         </td>
       </tr>
 
-      <tr onmouseout="eclipse_stop()" onmouseover="eclipse_start()"  bgcolor="#ffffd0">
+      <tr onmouseout="eclipse_stop()" onmouseover="eclipse_start()">
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
             <div class="two" id='eclipse'><video  width=100% height=100% muted autoplay loop>
