--- a/index.html
+++ b/index.html
@@ -284,7 +284,31 @@
           </p>
         </td>
       </tr>
-            
+          
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle">
+        <a href="images/benchmark.jpg"><img src="images/benchmark.jpg" alt="blind-date" width="160" height="160"></a>
+        </td>
+        <td width="75%" valign="middle">
+        <a href="https://doi.org/10.1016/j.solener.2021.05.056">
+          <span class="papertitle">Benchmarking of Deep Learning Irradiance Forecasting Models from Sky Images - An in-depth Analysis</span>
+        </a>
+        <br>
+        <strong>Quentin Paletta</strong>,
+        <a href="https://www.linkedin.com/in/guillaume-arbod-2b606b44/?originalSubdomain=eng">Guillaume Arbod</a>,
+        <a href="https://www-sigproc.eng.cam.ac.uk/Main/JL">Joan Lasenby</a>,
+        <br>
+        <em>Solar Energy</em>, 2021
+        <br>
+        <a href="https://doi.org/10.1016/j.solener.2021.05.056">paper</a>
+        <p></p>
+        <p>
+          Benchmarking of standard deep learning models for solar power nowcasting using sky images.
+        </p>
+        </td>
+      </tr>
+
+
     </tbody></table>
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
       <tr>
