--- a/index.html
+++ b/index.html
@@ -324,6 +324,47 @@
         </td>
       </tr>
 
+      <tr onmouseout="benchmark_stop()" onmouseover="benchmark_start()">
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <div class="one">
+            <div class="two" id='benchmark'><video  width=100% height=100% muted autoplay loop>
+            <source src="images/benchmark.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+            </video></div>
+            <img src='images/benchmark.jpg' width="160">
+          </div>
+          <script type="text/javascript">
+            function benchmark_start() {
+              document.getElementById('benchmark').style.opacity = "1";
+            }
+
+            function benchmark_stop() {
+              document.getElementById('benchmark').style.opacity = "0";
+            }
+            benchmark_stop()
+          </script>
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <a href="https://s3.us-east-1.amazonaws.com/climate-change-ai/papers/neurips2020/8/paper.pdf">
+            <span class="papertitle">A Temporally Consistent Image-based Sun Tracking Algorithm for Solar Energy Forecasting Applications</span>
+          </a>
+          <br>
+          <strong>Quentin Paletta</strong>,
+          <a href="https://www-sigproc.eng.cam.ac.uk/Main/JL">Joan Lasenby</a>,
+          <br>
+          <em>NeurIPS 2020 - Tackling Climate Change with Machine Learning workshop</em>, 2020
+          <br>
+          <a href="https://arxiv.org/abs/2012.01059">project page</a>
+          /
+          <a href="https://s3.us-east-1.amazonaws.com/climate-change-ai/papers/neurips2020/8/paper.pdf">paper</a>
+          /
+          <a href="https://s3.us-east-1.amazonaws.com/climate-change-ai/papers/neurips2020/8/slides.pdf">slides</a>
+          <p></p>
+          <p>
+            Benchmarking of standard deep learning models for solar power nowcasting using sky images.
+          </p>
+        </td>
+      </tr>
 
     </tbody></table>
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
