--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
       <a href="images/skygpt.jpg"><img src="images/skygpt.jpg" alt="blind-date" width="160" height="160"></a>
       </td>
       <td width="75%" valign="middle">
-      <papertitle>SkyGPT: Probabilistic Short-term Solar Forecasting Using Synthetic Sky Videos from Physics-constrained VideoGPT</papertitle>
+      <a href="https://arxiv.org/abs/2306.11682">
+      <span class="papertitle">SkyGPT: Probabilistic Short-term Solar Forecasting Using Synthetic Sky Videos from Physics-constrained VideoGPT</span>
+      </a>
       <br>
       <a href="https://yuhao-nie.github.io/">Yuhao Nie</a>,
       <a href="https://zelikman.me/">Eric Zelikman</a>,
