--- a/index.html
+++ b/index.html
@@ -206,6 +206,45 @@
         </td>
       </tr>
 
+      <tr onmouseout="flow_stop()" onmouseover="flow_start()">
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <div class="one">
+            <div class="two" id='flow'><video  width=100% height=100% muted autoplay loop>
+            <source src="images/flow.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+            </video></div>
+            <img src='images/flow.jpg' width="160">
+          </div>
+          <script type="text/javascript">
+            function flow_start() {
+              document.getElementById('flow').style.opacity = "1";
+            }
+
+            function flow_stop() {
+              document.getElementById('flow').style.opacity = "0";
+            }
+            flow_stop()
+          </script>
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <a href="https://userarea.eupvsec.org/proceedings/WCPEC-8/4BV.4.31/">
+            <span class="papertitle">Cloud Flow Centring in Sky and Satellite Images for Deep Solar Forecasting</span>
+          </a>
+          <br>
+          <strong>Quentin Paletta</strong>,
+          <a href="https://www.linkedin.com/in/guillaume-arbod-2b606b44/?originalSubdomain=eng">Guillaume Arbod</a>,
+          <a href="https://www-sigproc.eng.cam.ac.uk/Main/JL">Joan Lasenby</a>,
+          <br>
+          <em>8th World Conference on Photovoltaic Energy Conversion</em>, 2022
+          <br>
+          <a href="https://userarea.eupvsec.org/proceedings/WCPEC-8/4BV.4.31/">paper</a>
+          <p></p>
+          <p>
+            Processing method for cloud cover videos to consistently centre the polar representation on the incoming flow of clouds using an optical flow algorithm.
+          </p>
+        </td>
+      </tr>
+
       <tr onmouseout="spin_stop()" onmouseover="spin_start()"  bgcolor="#ffffd0">
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
