Few-shot learning paper

--- a/index.html
+++ b/index.html
@@ -55,7 +55,31 @@
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          
+
+      <tr bgcolor="#ffffd0">
+        <td style="padding:20px;width:25%;vertical-align:middle">
+        <a href="images/fsl_illustration.jpg"><img src="images/fsl_illustration.jpg" alt="blind-date" width="160" height="160"></a>
+        </td>
+        <td width="75%" valign="middle">
+        <a href="https://doi.org/10.1016/j.enconman.2024.118398">
+          <span class="papertitle">Improving cross-site generalisability of vision-based solar forecasting models with physics-informed transfer learning</span>
+        </a>
+        <br>
+        <strong>Quentin Paletta</strong>,
+        <a href="https://yuhao-nie.github.io/">Yuhao Nie</a>,
+        <a href="https://scholar.google.co.uk/citations?user=s7I9oVMAAAAJ&hl=fr&oi=ao">Yves-Marie Saint-Drenan</a>,
+        <a href="https://blesaux.github.io/">Bertrand Le Saux</a>,
+        <br>
+        <em>Energy Conversion and Management</em>, 2024
+        <br>
+        <a href="https://doi.org/10.1016/j.enconman.2024.118398">paper</a>
+        <p></p>
+        <p>
+        Forecasting solar energy accurately is good, generalising beyond the location where the model was trained is even better! Here, we explore diverse zero-shot and few-shot learning tasks based on a model pre-trained at another location.
+        </p>
+        </td>
+        </tr>
+            
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
         <a href="images/skygpt.jpg"><img src="images/skygpt.jpg" alt="blind-date" width="160" height="160"></a>
