--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <tr bgcolor="#ffffd0">
         <td style="padding:20px;width:25%;vertical-align:middle">
-        <a href="images/fsl_illustration.jpg"><img src="images/fsl_illustration.jpg" alt="blind-date" width="160" height="160"></a>
+        <a href="images/few-shot_learning_illustration.jpg"><img src="images/shot_learning_illustration.jpg" alt="blind-date" width="160" height="160"></a>
         </td>
         <td width="75%" valign="middle">
         <a href="https://doi.org/10.1016/j.enconman.2024.118398">
