--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <p>
                   Previously at the <a href="https://www.cam.ac.uk/">University of Cambridge</a>, I have developped deep learning algorithms for advancing solar nowcasting based on cloud cover observations from sky cameras and weather satellites.
                 </p>
+                <p>
+                  Also working on solar forecasting? Don't hesitate to contact me to join our community on Slack! (70+ researchers and engineers from around the world)
+                </p>
                 <p style="text-align:center">
                   <a href="https://scholar.google.co.uk/citations?user=QlnhDvEAAAAJ&hl=fr&oi=ao">Google Scholar</a> &nbsp;/&nbsp;
                   <a href="https://www.researchgate.net/profile/Quentin-Paletta">Research Gate</a> &nbsp;/&nbsp;
