--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                   Previously at the <a href="https://www.cam.ac.uk/">University of Cambridge</a>, I have developped deep learning algorithms for advancing solar nowcasting based on cloud cover observations from sky cameras and weather satellites.
                 </p>
                 <p>
-                  Also working on solar forecasting? Don't hesitate to contact me to join our community on Slack! (70+ researchers and engineers from around the world)
+                  Also working on solar forecasting? Don't hesitate to contact me to join our community on Slack! (80+ researchers and engineers from around the world)
                 </p>
                 <p style="text-align:center">
                   <a href="https://scholar.google.co.uk/citations?user=QlnhDvEAAAAJ&hl=fr&oi=ao">Google Scholar</a> &nbsp;/&nbsp;
@@ -58,6 +58,37 @@
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+
+
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle">
+        <a href="images/transferlearning.jpg"><img src="images/transferlearning.jpg" alt="blind-date" width="160" height="160"></a>
+        </td>
+        <td width="75%" valign="middle">
+        <a href="https://doi.org/10.1016/j.apenergy.2024.123467">
+          <span class="papertitle">Sky image-based solar forecasting using deep learning with heterogeneous multi-location data: Dataset fusion versus transfer learning</span>
+        </a>
+        <br>
+        <a href="https://yuhao-nie.github.io/">Yuhao Nie</a>,
+        <strong>Quentin Paletta</strong>,
+        <a href="https://scholar.google.com/citations?user=p2IqXSEAAAAJ">Andea scott</a>,
+        <a href="https://scholar.google.pl/citations?user=k3ixIT8AAAAJ&hl=pl">Luis Martin Pomares</a>,
+        <a href="https://www.linkedin.com/in/guillaume-arbod-2b606b44/?originalSubdomain=eng">Guillaume Arbod</a>,
+        <a href="https://scholar.google.com/citations?user=EUaSHDYAAAAJ">Sgouris Sgouridis</a>,
+        <a href="https://www-sigproc.eng.cam.ac.uk/Main/JL">Joan Lasenby</a>,
+        <a href="https://profiles.stanford.edu/adam-brandt">Adam Brandt</a>,
+        <br>
+        <em>Applied Energy</em>, 2024
+        <br>
+        <a href="https://doi.org/10.1016/j.apenergy.2024.123467">paper</a>
+        <p></p>
+        <p>
+          Comparative study between local training, global training, and transfer learning for solar nowcasting based on sky images.
+        </p>
+        </td>
+      </tr>
+
 
       <tr bgcolor="#ffffd0">
         <td style="padding:20px;width:25%;vertical-align:middle">
@@ -204,33 +235,6 @@
         </td>
       </tr>
 
-      <tr>
-        <td style="padding:20px;width:25%;vertical-align:middle">
-        <a href="images/transferlearning.jpg"><img src="images/transferlearning.jpg" alt="blind-date" width="160" height="160"></a>
-        </td>
-        <td width="75%" valign="middle">
-        <a href="https://arxiv.org/abs/2211.02108">
-          <span class="papertitle">Sky-image-based solar forecasting using deep learning with multi-location data: training models locally, globally or via transfer learning?</span>
-        </a>
-        <br>
-        <a href="https://yuhao-nie.github.io/">Yuhao Nie</a>,
-        <strong>Quentin Paletta</strong>,
-        <a href="https://scholar.google.com/citations?user=p2IqXSEAAAAJ">Andea scott</a>,
-        <a href="https://scholar.google.pl/citations?user=k3ixIT8AAAAJ&hl=pl">Luis Martin Pomares</a>,
-        <a href="https://www.linkedin.com/in/guillaume-arbod-2b606b44/?originalSubdomain=eng">Guillaume Arbod</a>,
-        <a href="https://scholar.google.com/citations?user=EUaSHDYAAAAJ">Sgouris Sgouridis</a>,
-        <a href="https://www-sigproc.eng.cam.ac.uk/Main/JL">Joan Lasenby</a>,
-        <a href="https://profiles.stanford.edu/adam-brandt">Adam Brandt</a>,
-        <br>
-        <em>Preprint</em>, 2023
-        <br>
-        <a href="https://arxiv.org/abs/2211.02108">paper</a>
-        <p></p>
-        <p>
-          Comparative study between local training, global training, and transfer learning for solar nowcasting based on sky images.
-        </p>
-        </td>
-      </tr>
 
       <tr onmouseout="flow_stop()" onmouseover="flow_start()">
         <td style="padding:20px;width:25%;vertical-align:middle">
