--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
           <em>Tackling Climate Change with Machine Learning workshop (ICLR)</em>, 2024
           <br>
           <a href="https://www.climatechange.ai/papers/iclr2024/69">paper</a>
+          <a href="https://github.com/SkyImageNet/skyimagenet">project</a>
           <p></p>
           <p>
-          Combining sky images and satellite observations into a single machine learning framework for intra-hour solar forecasting.
+          A multilocation sky image dataset for solar forecasting and atmospheric sciences.
           </p>
         </td>
       </tr>
