transfer to ECSAT

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                 <p class="name" style="text-align: center;">
                   Quentin Paletta
                 </p>
-                <p>I am a research fellow at the <a href="https://www.esa.int/About_Us/ESRIN">European Space Research Institute</a> of the <a href="https://www.esa.int/">European Space Agency (ESA)</a> in <a href="https://en.wikipedia.org/wiki/Frascati">Frascati</a> in collaboration with the <a href="https://climate.esa.int/en/esa-climate/esa-climate-office/">ESA Climate Office</a> in <a href="https://en.wikipedia.org/wiki/Harwell,_Oxfordshire">Harwell</a>, where I work on computer vision and machine learning for solar energy forecasting. 🌤️
+                <p>I am a research fellow at the <a href="https://climate.esa.int/en/esa-climate/esa-climate-office/">ESA Climate Office</a> of the <a href="https://www.esa.int/">European Space Agency (ESA)</a> in <a href="https://en.wikipedia.org/wiki/Harwell,_Oxfordshire">Harwell</a> in collaboration with the <a href="https://www.esa.int/About_Us/ESRIN">European Space Research Institute</a> in <a href="https://en.wikipedia.org/wiki/Frascati">Frascati</a>, where I work on computer vision and machine learning for solar energy forecasting. 🌤️
                 </p>
                 <p>
                   Previously at the <a href="https://www.cam.ac.uk/">University of Cambridge</a>, I have developped deep learning algorithms for advancing solar nowcasting based on cloud cover observations from sky cameras and weather satellites.
                 </p>
                 <p>
-                  Also working on solar forecasting? Don't hesitate to contact me to join our community on Slack! (80+ researchers and engineers from around the world)
+                  Also working on solar energy meteorology? Don't hesitate to contact me to join our community on Slack! (80+ researchers and engineers from around the world)
                 </p>
                 <p style="text-align:center">
                   <a href="https://scholar.google.co.uk/citations?user=QlnhDvEAAAAJ&hl=fr&oi=ao">Google Scholar</a> &nbsp;/&nbsp;
