--- a/index.html
+++ b/index.html
@@ -59,6 +59,26 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle">
+        <a href="images/thesis.png"><img src="images/thesis.png" alt="blind-date" width="160" height="160"></a>
+        </td>
+        <td width="75%" valign="middle">
+        <a href="https://doi.org/10.17863/CAM.111000">
+          <span class="papertitle">Vision-Based Solar Forecasting with Deep Learning</span>
+        </a>
+        <br>
+        <strong>Quentin Paletta</strong>,
+        <br>
+        <em>Engineering Department of the University of Cambridge</em>, 2024
+        <br>
+        <a href="https://doi.org/10.17863/CAM.111000">manuscript</a>
+        <p></p>
+        <p>
+          My PhD thesis!
+        </p>
+        </td>
+      </tr>
 
       <tr onmouseout="skyimagenet_stop()" onmouseover="skyimagenet_start()"  bgcolor="#ffffd0">
         <td style="padding:20px;width:25%;vertical-align:middle">
