--- a/index.html
+++ b/index.html
@@ -59,6 +59,19 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <h2>Entrepreneurship</h2>
+              <p>
+                I strive to enable the use of sky cameras for solar applications by developping a next-generation AI-driven sky camera at <a href="https://www.wematics.com/">Wematics</a>.
+              </p>
+            </td>
+          </tr>
+        </tbody></table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
         <a href="images/thesis.png"><img src="images/thesis.png" alt="blind-date" width="160" height="160"></a>
