--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <h2>Entrepreneurship</h2>
               <p>
-                I strive to enable the use of sky cameras for solar applications by developping a next-generation AI-driven sky camera at <a href="https://www.wematics.com/">Wematics</a>.
+                As Co-founder and Chief Information Officer at <a href="https://www.wematics.com/">Wematics</a>, I am dedicated to enabling the use of sky cameras for solar applications through the development of a next-generation AI-driven sky camera. This cutting-edge technology offers real-time cloud tracking and solar irradiance forecasting, thereby enhancing the efficiency and reliability of solar power generation. By providing accurate and timely data, our solution empowers grid operators and energy providers to optimize renewable energy integration and reduce costs.
               </p>
             </td>
           </tr>
