--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-
-      <tr>
+      <tr bgcolor="#ffffd0">
         <td style="padding:20px;width:25%;vertical-align:middle">
         <a href="images/thesis.png"><img src="images/thesis.png" alt="blind-date" width="160" height="160"></a>
         </td>
