fixed title for skyimagenet

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
           <a href="https://www.climatechange.ai/papers/iclr2024/69">
-            <span class="papertitle">Multilocation sky image dataset for solar forecasting and atmospheric science.</span>
+            <span class="papertitle">SkyImageNet: Towards a large-scale sky image dataset for solar power forecasting.</span>
           </a>
           <br>
           <a href="https://yuhao-nie.github.io/">Yuhao Nie</a>,
