Remote Sensing of Environment 2024

--- a/index.html
+++ b/index.html
@@ -73,6 +73,33 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle">
+        <a href="images/ssi.jpg"><img src="images/ssi.jpg" alt="blind-date" width="160" height="160"></a>
+        </td>
+        <td width="75%" valign="middle">
+        <a href="https://doi.org/10.1016/j.rse.2024.114431">
+          <span class="papertitle">Sky image-based solar forecasting using deep learning with heterogeneous multi-location data: Dataset fusion versus transfer learning</span>
+        </a>
+        <br>
+        <a href="https://alessandrosebastianelli.github.io/">Alessandro Sebastianelli</a>,
+        <a href="https://philab.esa.int/team/federico-serva/">Federico Serva</a>,
+        <a href="https://scholar.google.com/citations?user=kzJJbfsAAAAJ">Andrea Ceschini</a>,
+        <strong>Quentin Paletta</strong>,
+        <a href="https://massimopanella.site.uniroma1.it/">Massimo Panella</a>,
+        <a href="https://blesaux.github.io/">Bertrand Le Saux</a>,
+        <br>
+        <em>Remote Sensing of Environment</em>, 2024
+        <br>
+        <a href="https://doi.org/10.1016/j.rse.2024.114431">paper</a>
+        <p></p>
+        <p>
+          Day-ahead surface solar irradiance forecasting using machine learning validated with in situ measurements of the Baseline Surface Radiation Network (BSRN).
+        </p>
+        </td>
+      </tr>
+
+
       <tr bgcolor="#ffffd0">
         <td style="padding:20px;width:25%;vertical-align:middle">
         <a href="images/thesis.png"><img src="images/thesis.png" alt="blind-date" width="160" height="160"></a>
