update profile picture

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
-                <a href="images/QuentinPaletta.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/QuentinPaletta.jpg" class="hoverZoomLink"></a>
+                <a href="images/submission.jpeg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/submission.jpeg" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody></table>
