add bibtex citation

--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
         <em>Remote Sensing of Environment</em>, 2024
         <br>
         <a href="https://doi.org/10.1016/j.rse.2024.114431">paper</a>
+        <p>
+          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{sebastianelliMachineLearningForecast2024,\n  title={Machine Learning Forecast of Surface Solar Irradiance from Meteo Satellite Data},\n  author={Sebastianelli, Alessandro and Serva, Federico and Ceschini, Andrea and Paletta, Quentin and Panella, Massimo and Le Saux, Bertrand},\n  journal={Remote Sensing of Environment},\n  year={2024},\n  volume={315},\n  pages={114431}\n, issn = {0034-4257}\n, doi = {10.1016/j.rse.2024.114431}\n}')" target="_blank">BibTeX citation</a>.
+        </p>
+        
         <p></p>
         <p>
           Day-ahead surface solar irradiance forecasting using machine learning validated with in situ measurements of the Baseline Surface Radiation Network (BSRN).
